xxxxxxxxxxxxxxxxxxx/.antlr/pascalParser.java
// Generated from c:\Users\Jefeson\Desktop\jubiladores\xxxxxxxxxxxxxxxxxxx\pascal.g4 by ANTLR 4.9.2
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class pascalParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		RESERVED_AND=1, RESERVED_ARRAY=2, RESERVED_BEGIN=3, RESERVED_BOOLEAN=4, 
		CHAR=5, RESERVED_CONST=6, RESERVED_DIV=7, RESERVED_DO=8, RESERVED_ELSE=9, 
		RESERVED_END=10, RESERVED_FUNCTION=11, RESERVED_IF=12, RESERVED_IN=13, 
		RESERVED_INTEGER=14, RESERVED_REAL=15, RESERVED_MOD=16, RESERVED_NIL=17, 
		RESERVED_NOT=18, RESERVED_OF=19, RESERVED_OR=20, RESERVED_PROCEDURE=21, 
		RESERVED_PROGRAM=22, RESERVED_THEN=23, RESERVED_VAR=24, RESERVED_WHILE=25, 
		PLUS=26, MINUS=27, ASTERISK=28, SLASH=29, ASSIGNMENT=30, COMMA=31, SEMI=32, 
		COLON=33, EQUALS=34, NOT_EQUALS=35, LESS_THAN=36, LESS_THAN_OR_EQUALS=37, 
		GREATHER_THAN_OR_EQUALS=38, GREATER_THAN=39, OPEN_PARENTHESIS=40, CLOSE_PARENTHESIS=41, 
		OPEN_BRACKETS=42, OPEN_PARENTHESIS_DOT=43, CLOSE_BRACKETS=44, DOT_CLOSE_PARENTHESIS=45, 
		DOT=46, DOTDOT=47, RESERVED_STRING=48, TRUE=49, FALSE=50, WS=51, COMMENT_1=52, 
		COMMENT_2=53, IDENTIFIER=54, CHARACTER_STRING=55, UNSIGNED_INTEGER=56, 
		UNSIGNED_REAL=57;
	public static final int
		RULE_program = 0, RULE_programHeading = 1, RULE_block = 2, RULE_constantDefinitionPart = 3, 
		RULE_constantDefinition = 4, RULE_constant = 5, RULE_unsignedNumber = 6, 
		RULE_sign = 7, RULE_bool_ = 8, RULE_string = 9, RULE_type_ = 10, RULE_simpleType = 11, 
		RULE_scalarType = 12, RULE_subrangeType = 13, RULE_typeIdentifier = 14, 
		RULE_stringType = 15, RULE_arrayType = 16, RULE_typeList = 17, RULE_indexType = 18, 
		RULE_variableDeclarationPart = 19, RULE_variableDeclaration = 20, RULE_procedureAndFunctionDeclarationPart = 21, 
		RULE_procedureDeclaration = 22, RULE_formalParameterList = 23, RULE_formalParameterSection = 24, 
		RULE_parameterGroup = 25, RULE_identifierList = 26, RULE_functionDeclaration = 27, 
		RULE_resultType = 28, RULE_statement = 29, RULE_simpleStatement = 30, 
		RULE_assignmentStatement = 31, RULE_variable = 32, RULE_expression = 33, 
		RULE_relationalOperator = 34, RULE_simpleExpression = 35, RULE_additiveOperator = 36, 
		RULE_term = 37, RULE_multiplicativeOperator = 38, RULE_signedFactor = 39, 
		RULE_factor = 40, RULE_unsignedConstant = 41, RULE_functionDesignator = 42, 
		RULE_parameterList = 43, RULE_procedureStatement = 44, RULE_actualParameter = 45, 
		RULE_parameterWidth = 46, RULE_emptyStatement_ = 47, RULE_structuredStatement = 48, 
		RULE_compoundStatement = 49, RULE_statements = 50, RULE_ifStatement = 51, 
		RULE_whileStatement = 52;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "programHeading", "block", "constantDefinitionPart", "constantDefinition", 
			"constant", "unsignedNumber", "sign", "bool_", "string", "type_", "simpleType", 
			"scalarType", "subrangeType", "typeIdentifier", "stringType", "arrayType", 
			"typeList", "indexType", "variableDeclarationPart", "variableDeclaration", 
			"procedureAndFunctionDeclarationPart", "procedureDeclaration", "formalParameterList", 
			"formalParameterSection", "parameterGroup", "identifierList", "functionDeclaration", 
			"resultType", "statement", "simpleStatement", "assignmentStatement", 
			"variable", "expression", "relationalOperator", "simpleExpression", "additiveOperator", 
			"term", "multiplicativeOperator", "signedFactor", "factor", "unsignedConstant", 
			"functionDesignator", "parameterList", "procedureStatement", "actualParameter", 
			"parameterWidth", "emptyStatement_", "structuredStatement", "compoundStatement", 
			"statements", "ifStatement", "whileStatement"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'AND'", "'ARRAY'", "'BEGIN'", "'BOOLEAN'", "'CHAR'", "'CONST'", 
			"'DIV'", "'DO'", "'ELSE'", "'END'", "'FUNCTION'", "'IF'", "'IN'", "'INTEGER'", 
			"'REAL'", "'MOD'", "'NIL'", "'NOT'", "'OF'", "'OR'", "'PROCEDURE'", "'PROGRAM'", 
			"'THEN'", "'VAR'", "'WHILE'", "'+'", "'-'", "'*'", "'/'", "':='", "','", 
			"';'", "':'", "'='", "'<>'", "'<'", "'<='", "'>='", "'>'", "'('", "')'", 
			"'['", "'(.'", "']'", "'.)'", "'.'", "'..'", "'STRING'", "'TRUE'", "'FALSE'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "RESERVED_AND", "RESERVED_ARRAY", "RESERVED_BEGIN", "RESERVED_BOOLEAN", 
			"CHAR", "RESERVED_CONST", "RESERVED_DIV", "RESERVED_DO", "RESERVED_ELSE", 
			"RESERVED_END", "RESERVED_FUNCTION", "RESERVED_IF", "RESERVED_IN", "RESERVED_INTEGER", 
			"RESERVED_REAL", "RESERVED_MOD", "RESERVED_NIL", "RESERVED_NOT", "RESERVED_OF", 
			"RESERVED_OR", "RESERVED_PROCEDURE", "RESERVED_PROGRAM", "RESERVED_THEN", 
			"RESERVED_VAR", "RESERVED_WHILE", "PLUS", "MINUS", "ASTERISK", "SLASH", 
			"ASSIGNMENT", "COMMA", "SEMI", "COLON", "EQUALS", "NOT_EQUALS", "LESS_THAN", 
			"LESS_THAN_OR_EQUALS", "GREATHER_THAN_OR_EQUALS", "GREATER_THAN", "OPEN_PARENTHESIS", 
			"CLOSE_PARENTHESIS", "OPEN_BRACKETS", "OPEN_PARENTHESIS_DOT", "CLOSE_BRACKETS", 
			"DOT_CLOSE_PARENTHESIS", "DOT", "DOTDOT", "RESERVED_STRING", "TRUE", 
			"FALSE", "WS", "COMMENT_1", "COMMENT_2", "IDENTIFIER", "CHARACTER_STRING", 
			"UNSIGNED_INTEGER", "UNSIGNED_REAL"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "pascal.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public pascalParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgramContext extends ParserRuleContext {
		public ProgramHeadingContext programHeading() {
			return getRuleContext(ProgramHeadingContext.class,0);
		}
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public TerminalNode DOT() { return getToken(pascalParser.DOT, 0); }
		public TerminalNode EOF() { return getToken(pascalParser.EOF, 0); }
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(106);
			programHeading();
			setState(107);
			block();
			setState(108);
			match(DOT);
			setState(109);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ProgramHeadingContext extends ParserRuleContext {
		public TerminalNode RESERVED_PROGRAM() { return getToken(pascalParser.RESERVED_PROGRAM, 0); }
		public TerminalNode IDENTIFIER() { return getToken(pascalParser.IDENTIFIER, 0); }
		public TerminalNode SEMI() { return getToken(pascalParser.SEMI, 0); }
		public TerminalNode OPEN_PARENTHESIS() { return getToken(pascalParser.OPEN_PARENTHESIS, 0); }
		public IdentifierListContext identifierList() {
			return getRuleContext(IdentifierListContext.class,0);
		}
		public TerminalNode CLOSE_PARENTHESIS() { return getToken(pascalParser.CLOSE_PARENTHESIS, 0); }
		public ProgramHeadingContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_programHeading; }
	}

	public final ProgramHeadingContext programHeading() throws RecognitionException {
		ProgramHeadingContext _localctx = new ProgramHeadingContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_programHeading);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(111);
			match(RESERVED_PROGRAM);
			setState(112);
			match(IDENTIFIER);
			setState(117);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==OPEN_PARENTHESIS) {
				{
				setState(113);
				match(OPEN_PARENTHESIS);
				setState(114);
				identifierList();
				setState(115);
				match(CLOSE_PARENTHESIS);
				}
			}

			setState(119);
			match(SEMI);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BlockContext extends ParserRuleContext {
		public CompoundStatementContext compoundStatement() {
			return getRuleContext(CompoundStatementContext.class,0);
		}
		public List<ConstantDefinitionPartContext> constantDefinitionPart() {
			return getRuleContexts(ConstantDefinitionPartContext.class);
		}
		public ConstantDefinitionPartContext constantDefinitionPart(int i) {
			return getRuleContext(ConstantDefinitionPartContext.class,i);
		}
		public List<VariableDeclarationPartContext> variableDeclarationPart() {
			return getRuleContexts(VariableDeclarationPartContext.class);
		}
		public VariableDeclarationPartContext variableDeclarationPart(int i) {
			return getRuleContext(VariableDeclarationPartContext.class,i);
		}
		public List<ProcedureAndFunctionDeclarationPartContext> procedureAndFunctionDeclarationPart() {
			return getRuleContexts(ProcedureAndFunctionDeclarationPartContext.class);
		}
		public ProcedureAndFunctionDeclarationPartContext procedureAndFunctionDeclarationPart(int i) {
			return getRuleContext(ProcedureAndFunctionDeclarationPartContext.class,i);
		}
		public BlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_block; }
	}

	public final BlockContext block() throws RecognitionException {
		BlockContext _localctx = new BlockContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_block);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(126);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << RESERVED_CONST) | (1L << RESERVED_FUNCTION) | (1L << RESERVED_PROCEDURE) | (1L << RESERVED_VAR))) != 0)) {
				{
				setState(124);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case RESERVED_CONST:
					{
					setState(121);
					constantDefinitionPart();
					}
					break;
				case RESERVED_VAR:
					{
					setState(122);
					variableDeclarationPart();
					}
					break;
				case RESERVED_FUNCTION:
				case RESERVED_PROCEDURE:
					{
					setState(123);
					procedureAndFunctionDeclarationPart();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(128);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(129);
			compoundStatement();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ConstantDefinitionPartContext extends ParserRuleContext {
		public TerminalNode RESERVED_CONST() { return getToken(pascalParser.RESERVED_CONST, 0); }
		public List<ConstantDefinitionContext> constantDefinition() {
			return getRuleContexts(ConstantDefinitionContext.class);
		}
		public ConstantDefinitionContext constantDefinition(int i) {
			return getRuleContext(ConstantDefinitionContext.class,i);
		}
		public List<TerminalNode> SEMI() { return getTokens(pascalParser.SEMI); }
		public TerminalNode SEMI(int i) {
			return getToken(pascalParser.SEMI, i);
		}
		public ConstantDefinitionPartContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_constantDefinitionPart; }
	}

	public final ConstantDefinitionPartContext constantDefinitionPart() throws RecognitionException {
		ConstantDefinitionPartContext _localctx = new ConstantDefinitionPartContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_constantDefinitionPart);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(131);
			match(RESERVED_CONST);
			setState(135); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(132);
				constantDefinition();
				setState(133);
				match(SEMI);
				}
				}
				setState(137); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==IDENTIFIER );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ConstantDefinitionContext extends ParserRuleContext {
		public TerminalNode IDENTIFIER() { return getToken(pascalParser.IDENTIFIER, 0); }
		public TerminalNode EQUALS() { return getToken(pascalParser.EQUALS, 0); }
		public ConstantContext constant() {
			return getRuleContext(ConstantContext.class,0);
		}
		public ConstantDefinitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_constantDefinition; }
	}

	public final ConstantDefinitionContext constantDefinition() throws RecognitionException {
		ConstantDefinitionContext _localctx = new ConstantDefinitionContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_constantDefinition);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(139);
			match(IDENTIFIER);
			setState(140);
			match(EQUALS);
			setState(141);
			constant();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ConstantContext extends ParserRuleContext {
		public UnsignedNumberContext unsignedNumber() {
			return getRuleContext(UnsignedNumberContext.class,0);
		}
		public SignContext sign() {
			return getRuleContext(SignContext.class,0);
		}
		public TerminalNode IDENTIFIER() { return getToken(pascalParser.IDENTIFIER, 0); }
		public StringContext string() {
			return getRuleContext(StringContext.class,0);
		}
		public ConstantContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_constant; }
	}

	public final ConstantContext constant() throws RecognitionException {
		ConstantContext _localctx = new ConstantContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_constant);
		try {
			setState(152);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(143);
				unsignedNumber();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(144);
				sign();
				setState(145);
				unsignedNumber();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(147);
				match(IDENTIFIER);
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(148);
				sign();
				setState(149);
				match(IDENTIFIER);
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(151);
				string();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class UnsignedNumberContext extends ParserRuleContext {
		public TerminalNode UNSIGNED_INTEGER() { return getToken(pascalParser.UNSIGNED_INTEGER, 0); }
		public TerminalNode UNSIGNED_REAL() { return getToken(pascalParser.UNSIGNED_REAL, 0); }
		public UnsignedNumberContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_unsignedNumber; }
	}

	public final UnsignedNumberContext unsignedNumber() throws RecognitionException {
		UnsignedNumberContext _localctx = new UnsignedNumberContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_unsignedNumber);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(154);
			_la = _input.LA(1);
			if ( !(_la==UNSIGNED_INTEGER || _la==UNSIGNED_REAL) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SignContext extends ParserRuleContext {
		public TerminalNode PLUS() { return getToken(pascalParser.PLUS, 0); }
		public TerminalNode MINUS() { return getToken(pascalParser.MINUS, 0); }
		public SignContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sign; }
	}

	public final SignContext sign() throws RecognitionException {
		SignContext _localctx = new SignContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_sign);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(156);
			_la = _input.LA(1);
			if ( !(_la==PLUS || _la==MINUS) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Bool_Context extends ParserRuleContext {
		public TerminalNode TRUE() { return getToken(pascalParser.TRUE, 0); }
		public TerminalNode FALSE() { return getToken(pascalParser.FALSE, 0); }
		public Bool_Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_bool_; }
	}

	public final Bool_Context bool_() throws RecognitionException {
		Bool_Context _localctx = new Bool_Context(_ctx, getState());
		enterRule(_localctx, 16, RULE_bool_);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(158);
			_la = _input.LA(1);
			if ( !(_la==TRUE || _la==FALSE) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StringContext extends ParserRuleContext {
		public TerminalNode CHARACTER_STRING() { return getToken(pascalParser.CHARACTER_STRING, 0); }
		public StringContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_string; }
	}

	public final StringContext string() throws RecognitionException {
		StringContext _localctx = new StringContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_string);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(160);
			match(CHARACTER_STRING);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Type_Context extends ParserRuleContext {
		public SimpleTypeContext simpleType() {
			return getRuleContext(SimpleTypeContext.class,0);
		}
		public ArrayTypeContext arrayType() {
			return getRuleContext(ArrayTypeContext.class,0);
		}
		public Type_Context(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_type_; }
	}

	public final Type_Context type_() throws RecognitionException {
		Type_Context _localctx = new Type_Context(_ctx, getState());
		enterRule(_localctx, 20, RULE_type_);
		try {
			setState(164);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case RESERVED_BOOLEAN:
			case CHAR:
			case RESERVED_INTEGER:
			case RESERVED_REAL:
			case PLUS:
			case MINUS:
			case OPEN_PARENTHESIS:
			case RESERVED_STRING:
			case IDENTIFIER:
			case CHARACTER_STRING:
			case UNSIGNED_INTEGER:
			case UNSIGNED_REAL:
				enterOuterAlt(_localctx, 1);
				{
				setState(162);
				simpleType();
				}
				break;
			case RESERVED_ARRAY:
				enterOuterAlt(_localctx, 2);
				{
				setState(163);
				arrayType();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SimpleTypeContext extends ParserRuleContext {
		public ScalarTypeContext scalarType() {
			return getRuleContext(ScalarTypeContext.class,0);
		}
		public SubrangeTypeContext subrangeType() {
			return getRuleContext(SubrangeTypeContext.class,0);
		}
		public TypeIdentifierContext typeIdentifier() {
			return getRuleContext(TypeIdentifierContext.class,0);
		}
		public StringTypeContext stringType() {
			return getRuleContext(StringTypeContext.class,0);
		}
		public SimpleTypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_simpleType; }
	}
